Closed Bug 1254393 Opened 9 years ago Closed 9 years ago

Take ownership of error reporting on the AutoEntryScript in nsXPCWrappedJSClass::CallMethod

Categories

(Core :: XPConnect, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla48
Tracking Status
firefox48 --- fixed

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Still trying to get this green on try, because of silliness like bug 1253891 and bug 1254230 and the like. But figure I should at least get the patch saved somewhere other than my hard drive.
Please pay attention to the second of the two behavior changes listed. It's actually causing some issues in terms of orange on try, so maybe we _don't_ want it... hard to say.
Attachment #8727702 - Flags: review?(bobbyholley)
Comment on attachment 8727702 [details] [diff] [review] Take ownership of error reporting on the AutoEntryScript in nsXPCWrappedJSClass::CallMethod Review of attachment 8727702 [details] [diff] [review]: ----------------------------------------------------------------- This looks great. I'm fine with the corner-case behavior change if it makes things simpler. ::: browser/components/preferences/in-content/advanced.js @@ +358,5 @@ > onNetworkCacheDiskConsumption: function(consumption) { > var size = DownloadUtils.convertByteUnits(consumption); > // The XBL binding for the string bundle may have been destroyed if > // the page was closed before this callback was executed. > + Math.sin(); I don't think you want the changes in this file, here or below.
Attachment #8727702 - Flags: review?(bobbyholley) → review+
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: